[build-system]
requires = [ "setuptools", "lsst-versions >= 1.3.0", ]
build-backend = "setuptools.build_meta"

[project]
name = "summit_utils"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "lsst_versions.get_lsst_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[tool.isort]
profile = "black"
line_length = 110
known_first_party = ["lsst", "tests"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [
    "__init__.py",
    "config/*",
    "python/lsst/summit/utils/resources/*/*.py",
]
